# htracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.txt  build.nix  default.nix  flake.nix  line.hpp  main.cpp  shell.bat  shell.nix  sphere.hpp
.github/workflows/: ci.yaml
apps/: CMakeLists.txt
apps/ray/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
examples/disco_ring/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  htracer-config.cmake.in
lib/include/htracer/: float_traits.hpp  htracer.hpp  numerics.hpp  vector.hpp
lib/include/htracer/colors/: colors.hpp  hsl.hxx  hsl_impl.hxx  srgb.hxx  srgb_impl.hxx  srgb_linear.hxx  srgb_linear_impl.hxx
lib/include/htracer/geometries/: geometry.hpp  plane.hpp  ray.hpp  sphere.hpp
lib/include/htracer/outputs/: ppm.hpp
lib/include/htracer/rendering/: camera.hpp  concepts.hpp  image.hpp  intersector.hpp  policies.hpp  random_engine.hpp  random_seed.hpp  rendering.hpp  samples_per_pixel.hpp  tracing.hpp
lib/include/htracer/rendering/adapters/: deterministic_adapter.hpp  randomized_adapter.hpp
lib/include/htracer/rendering/batchers/: column_batcher.hpp  pixel_batcher.hpp
lib/include/htracer/rendering/detail/: component_ref.hpp
lib/include/htracer/rendering/lenses/: pinhole_lens.hpp  thin_lens.hpp
lib/include/htracer/rendering/renderers/: deterministic_renderer.hpp  randomized_renderer.hpp
lib/include/htracer/rendering/samplers/: deterministic_sampler.hpp  repeat_sampler.hpp
lib/include/htracer/rendering/sensors/: point_sensor.hpp  uniform_sensor.hpp
lib/include/htracer/staging/: light.hpp  material.hpp  object.hpp  object_base.hpp  scene.hpp  scene_with.hpp
lib/include/htracer/utils/: heterogeneous_visitable.hpp  vector_crtp.hpp  vector_transform.hpp
lib/include/htracer/utils/generator_providers/: generator_state.hpp  seeded_provider.hpp  thread_local_provider.hpp  wrapping_provider.hpp
nix/: installed-consumer.nix  quality.nix
source/: CMakeLists.txt
source/apps/: CMakeLists.txt
source/apps/ray/: CMakeLists.txt  main.cpp
source/htracer/: CMakeLists.txt  HTracerConfig.cmake.in  htracerConfig.cmake.in  include_files.txt
source/htracer/include/htracer/: ]  color.hpp  numerics.hpp  vector.hpp
source/htracer/include/htracer/colors/: colors.hpp  hsl.hpp  hsl.hxx  hsl_impl.hxx  srgb.hxx  srgb_impl.hxx  srgb_linear.hxx  srgb_linear_impl.hxx
source/htracer/include/htracer/geometries/: geometry.hpp  plane.hpp  ray.hpp  sphere.hpp
source/htracer/include/htracer/geometry/: plane.hpp  ray.hpp  sphere.hpp
source/htracer/include/htracer/output/: ppm.hpp
source/htracer/include/htracer/outputs/: ppm.hpp
source/htracer/include/htracer/raytracing/: camera.hpp  concepts.hpp  image.hpp  intersector.hpp  policies.hpp  sampler.hpp
source/htracer/include/htracer/raytracing/cameras/: camera.hpp  sampling.hpp
source/htracer/include/htracer/raytracing/lenses/: pinhole.hpp  point.hpp  thin.hpp
source/htracer/include/htracer/raytracing/pixel_samplers/: constant.hpp  uniform.hpp
source/htracer/include/htracer/rendering/: camera.hpp  concepts.hpp  image.hpp  intersector.hpp  policies.hpp  rendering.hpp  tracing.hpp
source/htracer/include/htracer/rendering/adapters/: deterministic_adapter.hpp
source/htracer/include/htracer/rendering/batchers/: column_batcher.hpp  pixel_batcher.hpp
source/htracer/include/htracer/rendering/lenses/: pinhole.hpp  thin.hpp
source/htracer/include/htracer/rendering/renderers/: deterministic_renderer.hpp  randomized_renderer.hpp
source/htracer/include/htracer/rendering/samplers/: deterministic_sampler.hpp  repeat_sampler.hpp
source/htracer/include/htracer/rendering/sensors/: constant.hpp  uniform.hpp
source/htracer/include/htracer/scene/: light.hpp  material.hpp  object.hpp  object_base.hpp  scene.hpp  scene_view.hpp
source/htracer/include/htracer/staging/: object.hpp  object_base.hpp  scene.hpp  scene_view.hpp
source/htracer/include/htracer/staging/scene/: scene.hxx  scene_impl.hxx  scene_view.hxx  scene_view_impl.hxx
source/htracer/include/htracer/utils/: container.hpp  heterogeneous_visitable.hpp  heterogeneus_visitable.hpp  random.hpp  randomness.hpp  vector_crtp.hpp  vector_transform.hpp
source/htracer/include/htracer/utils/generator_providers/: thread_local_provider.hpp  wrapping_provider.hpp
source/tests/: CMakeLists.txt
source/tests/compare_output/: CMakeLists.txt  main.cpp  ray_compare_test-golden.ppm
src/: CMakeLists.txt
src/raytracer/: CMakeLists.txt
src/raytracer/include/raytracer/: camera.hpp  color.hpp  containertest.hpp  intersector.hpp  light.hpp  line.hpp  material.hpp  ray.hpp  sampler.hpp  scene.hpp  sphere.hpp  vector.hpp
src/raytracer/include/raytracer/utils/: container.hpp
tests/: CMakeLists.txt
tests/colors_hsl/: CMakeLists.txt  main.cpp
tests/compare_output/: CMakeLists.txt  golden.ppm  main.cpp
tests/headers_odr_guard/: CMakeLists.txt  another.cpp  another.hpp  main.cpp
tests/installed_consumer/: CMakeLists.txt  main.cpp
tests/randomized_renderer/: CMakeLists.txt  main.cpp
tests/renderer_api/: CMakeLists.txt  main.cpp
